<resources>
    <string name="app_name">AppSegundoEjercicio</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="titulo">SUELDO DE TRABAJADOR</string>
    <string name="apellido">Ingrese el apellido del empleado</string>
    <string name="dias">Ingrese dias trabajados</string>
    <string name="sueldo">Ingrese sueldo</string>
    <string name="importe">CALCULAR IMPORTE</string>



</resources>
