<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainSueldo"
    android:orientation="vertical"
    android:padding="10dp"
    tools:showIn="@layout/activity_main_sueldo">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="18dp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/ape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellido" />



    <TextView
        android:id="@+id/cargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="cargo" />



    <TextView
        android:id="@+id/dias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dias" />



    <TextView
        android:id="@+id/sueldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sueldo" />

    <TextView
        android:id="@+id/importe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Importe" />


    <TextView
        android:id="@+id/bonifi1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="bonificacion 1 *" />

    <TextView
        android:id="@+id/bonifi2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="bonificacion 2 *" />


    <TextView
        android:id="@+id/sobretiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sobretiempo" />

    <TextView
        android:id="@+id/sueldototal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sueldo Total" />

</LinearLayout>
